[metadata]
name = discord_ext_commands_coghelper
version = attr: discord_ext_commands_coghelper.__init__.__version__
url = https://github.com/jukey17/discord-ext-commands-coghelper
author = jukey17
description = utilities for easy use of Cog in discord.py
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = file: LICENCE
keywords = discord, discord.py
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
install_requires = discord~=1.7.3